@@ -312,6 +312,9 @@ Other Changes
     if 'bar' in (foo or {}):
       pass
 
+* Redefinition of dummy function is now possible. ``function-redefined`` message won't be emitted anymore when
+  dummy functions are redefined.
+
 * ``missing-param-doc`` and ``missing-type-doc`` are no longer emitted when
   ``Args`` and ``Keyword Args`` are mixed in Google docstring.
     
