@@ -122,9 +122,14 @@ What's New in Pylint 1.8?
 
       Close #574
 
+    * ``function-redefined`` message is no longer emitted for functions and
+      methods which names matches dummy variable name regular expression.
+      Close #1369
+
     * Fix ``missing-param-doc`` and ``missing-type-doc`` false positives when
       mixing ``Args`` and ``Keyword Args`` in Google docstring.
       Close #1409
+
 
 What's New in Pylint 1.7.1?
 =========================
